--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@emotion/styled": "^11.6.0",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.11",
     "framer-motion": "^5.6.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
