--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,19 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "functions": {
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build",
+    "source": "functions"
+  },
+  "emulators": {
+    "hosting": {
+      "host": "HOST",
+      "port": "PORT"
+    }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
