--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.38",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.11",
+    "firebase": "^9.9.2",
     "framer-motion": "^5.6.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
