--- a/functions/package.json
+++ b/functions/package.json
@@ -11,9 +11,10 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "firebase-admin": "^11.0.1",
+    "axios": "^0.27.2",
     "firebase-functions": "^3.22.0"
   },
   "devDependencies": {
