--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/functions/src/index.js",
+  "main": "lib/functions/src/controller.js",
   "dependencies": {
     "firebase-admin": "^11.0.1",
     "axios": "^0.27.2",
