Attempt setting up shared models between functions and frontend, and some other tsconfig automagic-fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "isolatedModules": true,
     "noUnusedLocals": false,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "@shared/*": ["./shared/*"]
+    }
   },
   "include": [
     "src"
