--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "SMDb",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20"
+  },
   "dependencies": {
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
