--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "20"
+    "node": ">=18"
   },
   "main": "lib/functions/src/controller.js",
   "dependencies": {
