--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo "INSTALLING FOR FRONTEND" && npm ci && cd functions/ && echo "INSTALLING FOR FUNCTIONS" && npm ci && cd ../ && echo "BUILDING FOR FRONTEND" && npm run build && cd functions/ && echo "BUILDING FOR FUNCTIONS" && npm run build && cd ../ && echo "COMPLETE"
+      - run: echo "INSTALLING FOR FRONTEND" && npm ci && cd functions/ && echo "INSTALLING FOR FUNCTIONS" && npm ci && cd ../ && echo "BUILDING FOR FRONTEND" && CI=false npm run build && cd functions/ && echo "BUILDING FOR FUNCTIONS" && npm run build && cd ../ && echo "COMPLETE"
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
