Attempt quick fix of shared models outside /src by moving it inside, and fix imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,12 @@
     "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["src/shared/*"]
     }
   },
   "include": [
     "src",
-    "shared"
+    "src/shared"
   ],
   "exclude": [
     "functions"
