Configure firestore to run emulator locally instead of using production data

--- a/firebase.json
+++ b/firebase.json
@@ -19,8 +19,8 @@
   },
   "emulators": {
     "hosting": {
-      "host": "HOST",
-      "port": "PORT"
+      "host": "localhost",
+      "port": 4242
     }
   },
   "firestore": {
