--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
+    "local": "npm run build && firebase emulators:start --only functions,firestore --import=./emulator-data --export-on-exit=./emulator-data",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
